--- a/main.html
+++ b/main.html
@@ -7,6 +7,61 @@
 </head>
 
 <body>
+
+	<h2>Job Application Form</h2>
+
+    <form action="#" method="POST">
+        <div>
+            <label for="name">Name*</label>
+            <input type="text" id="name" name="name" required>
+        </div>
+
+        <div>
+            <label for="email">Email*</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+
+        <div>
+            <label>Gender*</label>
+            <label for="male">
+                <input type="radio" id="male" name="gender" value="male" required> Male
+            </label>
+            <label for="female">
+                <input type="radio" id="female" name="gender" value="female" required> Female
+            </label>
+            <label for="other">
+                <input type="radio" id="other" name="gender" value="other" required> Other
+            </label>
+        </div>
+        <div>
+            <label for="laptop">Laptop Brands</label>
+            <select id="laptop" name="laptop">
+                <option value="apple">Apple</option>
+                <option value="asus">Asus</option>
+                <option value="hp">HP</option>
+            </select>
+        </div>
+
+        <div>
+            <label for="age">Age*</label>
+            <input type="number" id="age" name="age" required>
+        </div>
+        <div>
+            <label for="dob">Date of Birth*</label>
+            <input type="date" id="dob" name="dob" required>
+        </div>
+        <div>
+            <label for="password">Password*</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <div>
+            <label for="portfolio">Portfolio URL</label>
+            <input type="url" id="portfolio" name="portfolio">
+        </div>
+        <div>
+            <button type="submit">Submit</button>
+        </div>
+    </form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
